# ivyhacks

./: .gitignore  GoogleCloudAutoml.py  README.md  input_helper_v2.py  model.py
.github/workflows/: rust.yml
client/: package.json
client/src/: App.tsx  demo.json
client/src/components/: AddTodo.tsx  TodoItem.tsx
data/: output.txt  output_0_50.txt  output_150_300.txt  test-fetch.xml  test-search.json  test-search.xml
rust/: Cargo.toml  demo.json
rust/src/: lib.rs  main.rs  types.rs
