[package]
name = "rust"
version = "0.1.0"
authors = ["Preston Tunnell Wilson <preston_tunnell_wilson@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
reqwest = "0.10"
serde_json = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "0.2", features = ["full"]}